# agentic-workflow-builder

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  SPEC.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_workflows_table.py
frontend/: .gitignore  Makefile  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
src/agentic_workflow_builder/: __init__.py  api.py  config.py  db.py  models.py  validation.py
tests/: conftest.py  test_api.py  test_greet.py  test_validation.py
