[project]
name = "agentic-workflow-builder"
version = "0.1.0"
description = ""
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "networkx>=3.6.1",
    "pydantic-settings>=2.14.1",
    "sqlalchemy[asyncio]>=2.0.50",
    "uvicorn[standard]>=0.48.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_workflow_builder"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "hatchling>=1.29.0",
    "httpx>=0.28.1",
    "testcontainers[postgresql]>=4.14.2",
    "types-networkx>=3.6.1.20260518",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "SIM", "TCH", "N", "C4", "PTH"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
mypy_path = "src"

[[tool.mypy.overrides]]
# testcontainers ships no py.typed marker or stubs; ignore the missing import.
module = "testcontainers.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
